--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/node": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
     "babel-plugin-module-resolver": "^5.0.0",
+    "eslint": "^8.42.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-import-resolver-babel-module": "^5.3.2",
     "eslint-plugin-import": "^2.27.5",
