--- a/.babelrc.json
+++ b/.babelrc.json
@@ -17,7 +17,9 @@
                     "./src"
                 ],
                 "alias": {
-                    "@config": "./src/config"
+                    "@config": "./src/config",
+                    "@routes": "./src/routes",
+                    "@controllers": "./src/controllers"
                 },
                 "extensions": ".js"
             }
