--- a/.eslintrc
+++ b/.eslintrc
@@ -39,6 +39,11 @@
     },
     "settings": {
         "import/resolver": {
+            "node": {
+                "paths": [
+                    "src"
+                ]
+            },
             "babel-module": {}
         }
     }
