--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start": "node dist/start.js",
     "build": "babel src --out-dir dist --copy-files",
-    "dev": "nodemon --exec babel-node src/start.js"
+    "dev": "NODE_ENV=development nodemon --exec babel-node src/start.js"
   },
   "lint-staged": {
     "*.js": [
@@ -30,6 +30,7 @@
     "@babel/core": "^7.22.5",
     "@babel/node": "^7.22.5",
     "@babel/preset-env": "^7.22.5",
+    "@faker-js/faker": "^8.0.2",
     "babel-plugin-module-resolver": "^5.0.0",
     "eslint": "^8.42.0",
     "eslint-config-standard": "^17.1.0",
